Changes to the font for the other apps pages (Android and iOS).

--- a/otherapps/otherAppsIOS.html
+++ b/otherapps/otherAppsIOS.html
@@ -2,14 +2,20 @@
   <head>
     <title>Other hue apps</title>
 	<style>
+		@font-face {
+		        font-family: 'centraleSans';
+		        src: 
+		            url('fonts/CentraleSans-Book.ttf')  format('truetype'), /* Safari, Android, iOS */
+		            url('fonts/CentraleSans-Book.woff') format('woff'); /* Modern Browsers */
+				font-weight: normal;
+				font-style: normal;
+		}	
 	   img {
 	      height: 70px;
 		  }
-          body { 
-		     font-family: Gill, Helvetica, sans-serif;
-			}
+
 		td {
-			 font-size: 70%;
+			 font-size: 80%;
         }			 
 		.appHeading {
 			 font-size: 100%;
