--- a/otherapps/otherAppsAndroid.html
+++ b/otherapps/otherAppsAndroid.html
@@ -43,7 +43,7 @@
 		 
 		 <tr>
 		    <td><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huehalloween"><img src="imagesAndroid/huehalloween.png" /></a></td>
-			<td><span class="appHeading"><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huehalloween"> Goldee</a></span></br>
+			<td><span class="appHeading"><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huehalloween"> Hue Halloween</a></span></br>
 			  <span class="appDesc">A sound and light effects board to get you ready for a good scare.</span></td>
 		 </tr>	
 
