Hopefully fixed the font-family (for the Android webview).

--- a/otherapps/otherAppsAndroid.html
+++ b/otherapps/otherAppsAndroid.html
@@ -11,7 +11,7 @@
 				font-style: normal;
 		}
 		
-		p {
+		span {
 			font-family:centraleSans;
 		}
 			
@@ -21,6 +21,7 @@
 
 		td {
 			 font-size: 80%;
+			 font-family:centraleSans;
         }			 
 		.appHeading {
 			 font-size: 100%;
@@ -29,6 +30,7 @@
 		.appDesc {
 		  color: #8E8E8E;
 		  font-size: 120%;
+		  font-family:centraleSans;
 		}
 		a {
 		    color: #1E1E1E;
