--- a/otherapps/otherAppsIOS.html
+++ b/otherapps/otherAppsIOS.html
@@ -10,12 +10,16 @@
 				font-weight: normal;
 				font-style: normal;
 		}	
+		span {
+			font-family:centraleSans;
+		}
 	   img {
 	      height: 70px;
 		  }
 
 		td {
 			 font-size: 80%;
+			 font-family:centraleSans;
         }			 
 		.appHeading {
 			 font-size: 100%;
