Test description in other apps is now also clickable (i.e. a URL to the app).

--- a/otherapps/otherAppsAndroid.html
+++ b/otherapps/otherAppsAndroid.html
@@ -24,17 +24,15 @@
 			 font-family:centraleSans;
         }			 
 		.appHeading {
-			 font-size: 100%;
+			 font-size: 120%;
 			 font-weight: bold;
 		}
 		.appDesc {
 		  color: #8E8E8E;
 		  font-size: 120%;
-		  font-family:centraleSans;
 		}
 		a {
 		    color: #1E1E1E;
-		    font-size: 120%;
             text-decoration: none;
 		}
 		
@@ -45,32 +43,32 @@
 		 
 		 <tr>
 		    <td><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huehalloween"><img src="imagesAndroid/huehalloween.png" /></a></td>
-			<td><span class="appHeading"><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huehalloween"> Hue Halloween</a></span></br>
-			  <span class="appDesc">A sound and light effects board to get you ready for a good scare.</span></td>
+			<td><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huehalloween"><span class="appHeading"> hue Halloween</span></br>
+			  <span class="appDesc">A sound and light effects board to get you ready for a good scare.</span></a></td>
 		 </tr>	
 
 		 <tr>
 		    <td><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huedisco"><img src="imagesAndroid/huedisco.png" /></a></td>
-			<td><span class="appHeading"><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huedisco">hue Disco</a></span></br>
-			  <span class="appDesc">Transform any room into a dance floor.</span></td>
+			<td><a href="https://play.google.com/store/apps/details?id=nl.ijsdesign.huedisco"><span class="appHeading"> hue Disco</span></br>
+			  <span class="appDesc">Transform any room into a dance floor.</span></a></td>
 		 </tr>
 		 
 		 <tr>
 		    <td><a href="https://play.google.com/store/apps/details?id=com.benchevoor.huepro&hl=en_GB"><img src="imagesAndroid/huepro.png" /></a></td>
-			<td><span class="appHeading"><a href="https://play.google.com/store/apps/details?id=com.benchevoor.huepro&hl=en_GB">hue Pro</a></span></br>
-			  <span class="appDesc">Play with tone, contrast and colour to create any lighting mood you could imagine.</span></td>
+			<td><a href="https://play.google.com/store/apps/details?id=com.benchevoor.huepro&hl=en_GB"><span class="appHeading"> hue Pro</span></br>
+			  <span class="appDesc">Play with tone, contrast and colour to create any lighting mood you could imagine.</span></a></td>
 		 </tr>			 		 
 		 
 		 <tr>
 		    <td><a href="https://play.google.com/store/apps/details?id=com.rockawaylabs.huey&hl=en"><img src="imagesAndroid/huey.png" /></a></td>
-			<td><span class="appHeading"><a href="https://play.google.com/store/apps/details?id=com.rockawaylabs.huey&hl=en">huey</a></span></br>
-			  <span class="appDesc">Change the way you watch TV, Movies and Gaming! Huey uses your device's camera and microphone to dynamically change colors on your bulbs.</span></td>
+			<td><a href="https://play.google.com/store/apps/details?id=com.rockawaylabs.huey&hl=en"><span class="appHeading"> huey</span></br>
+			  <span class="appDesc">Change the way you watch TV, Movies and Gaming! Huey uses your device's camera and microphone to dynamically change colors on your bulbs.</span></a></td>
 		 </tr>
 		 
 		 <tr>
 		    <td><a href="https://play.google.com/store/apps/details?id=com.incorporateapps.huenfc.free&hl=en"><img src="imagesAndroid/nfchue.png" /></a></td>
-			<td><span class="appHeading"><a href="https://play.google.com/store/apps/details?id=com.incorporateapps.huenfc.free&hl=en">NFC for hue</a></span></br>
-			 <span class="appDesc"> Control your lights with NFC tags.</span></td>
+			<td><a href="https://play.google.com/store/apps/details?id=com.incorporateapps.huenfc.free&hl=en"><span class="appHeading"> NFC for hue</span></br>
+			 <span class="appDesc"> Control your lights with NFC tags.</span></a></td>
 		 </tr>			 			 
 		 
 	
