--- a/otherapps/otherAppsIOS.html
+++ b/otherapps/otherAppsIOS.html
@@ -22,7 +22,7 @@
 			 font-family:centraleSans;
         }			 
 		.appHeading {
-			 font-size: 100%;
+			 font-size: 120%;
 			 font-weight: bold;
 		}
 		.appDesc {
@@ -31,7 +31,6 @@
 		}
 		a {
 		    color: #1E1E1E;
-		    font-size: 120%;
             text-decoration: none;
 		}
 		
@@ -42,44 +41,44 @@
 		 
 		 <tr>
 		    <td><a href="https://itunes.apple.com/us/app/goldee-for-philips-hue/id706228953?mt=8"><img src="imagesIOS/goldee.png" /></a></td>
-			<td><span class="appHeading"><a href="https://itunes.apple.com/us/app/goldee-for-philips-hue/id706228953?mt=8"> Goldee</a></span></br>
-			  <span class="appDesc">Bring your hue to life with beautifully designed light scenes.</span></td>
+			<td><a href="https://itunes.apple.com/us/app/goldee-for-philips-hue/id706228953?mt=8"><span class="appHeading"> Goldee</span></br>
+			  <span class="appDesc">Bring your hue to life with beautifully designed light scenes.</span></a></td>
 		 </tr>	
 
 		 <tr>
 		    <td><a href="https://itunes.apple.com/be/app/ambilight+hue/id640081408?mt=8"><img src="imagesIOS/ambilight.png" /></a></td>
-			<td><span class="appHeading"><a href="https://itunes.apple.com/be/app/ambilight+hue/id640081408?mt=8"> Ambilight+hue</a></span></br>
-			  <span class="appDesc">Expand your TV viewing experience by extending your Ambilight TV colors to your hue light bulbs. Available on iOS and Android.</span></td>
+			<td><a href="https://itunes.apple.com/be/app/ambilight+hue/id640081408?mt=8"><span class="appHeading"> Ambilight+hue</span></br>
+			  <span class="appDesc">Expand your TV viewing experience by extending your Ambilight TV colors to your hue light bulbs. Available on iOS and Android.</span></a></td>
 		 </tr>
 		 
 		 <tr>
 		    <td><a href="https://itunes.apple.com/gb/app/ambify/id588259601?mt=8"><img src="imagesIOS/ambify.png" /></a></td>
-			<td><span class="appHeading"><a href="https://itunes.apple.com/gb/app/ambify/id588259601?mt=8"> Ambify</a></span></br>
-			  <span class="appDesc">The hue jukebox, see how light reacts to your music.</span></td>
+			<td><a href="https://itunes.apple.com/gb/app/ambify/id588259601?mt=8"><span class="appHeading"> Ambify</span></br>
+			  <span class="appDesc">The hue jukebox, see how light reacts to your music.</span></a></td>
 		 </tr>			 		 
 		 
 		 <tr>
 		    <td><a href="https://itunes.apple.com/us/app/lightbow-for-philips-hue-lifx/id695235159?mt=8"><img src="imagesIOS/lightbow.png" /></a></td>
-			<td><span class="appHeading"><a href="https://itunes.apple.com/us/app/lightbow-for-philips-hue-lifx/id695235159?mt=8"> Lightbow</a></span></br>
-			  <span class="appDesc">Set the mood with your new remote control for hue.</span></td>
+			<td><a href="https://itunes.apple.com/us/app/lightbow-for-philips-hue-lifx/id695235159?mt=8"><span class="appHeading"> Lightbow</span></br>
+			  <span class="appDesc">Set the mood with your new remote control for hue.</span></a></td>
 		 </tr>
 		 
 		 <tr>
 		    <td><a href="https://itunes.apple.com/en/app/muesic/id670816897?mt=8"><img src="imagesIOS/muesic.png" /></a></td>
-			<td><span class="appHeading"><a href="https://itunes.apple.com/en/app/muesic/id670816897?mt=8">Muesic</a></span></br>
-			 <span class="appDesc">The Muesic app is an amazing way to control every Philips hue bulb in your home using your personal music of your iTunes library.</span></td>
+			<td><a href="https://itunes.apple.com/en/app/muesic/id670816897?mt=8"><span class="appHeading">Muesic</span></br>
+			 <span class="appDesc">The Muesic app is an amazing way to control every Philips hue bulb in your home using your personal music of your iTunes library.</span></a></td>
 		 </tr>	
 		 		 			 		 
 		 <tr>
 		    <td><a href="https://itunes.apple.com/us/app/splyce-fancy-music-player/id648339800?mt=8"><img src="imagesIOS/splyce.png" /></a></td>
-			<td><span class="appHeading"><a href="https://itunes.apple.com/us/app/splyce-fancy-music-player/id648339800?mt=8"> Splyce</a></span></br>
-			 <span class="appDesc">Live a whole new music experience with Splyce! The most beautiful music player with magical DJ powers.</span></td>
+			<td><a href="https://itunes.apple.com/us/app/splyce-fancy-music-player/id648339800?mt=8"><span class="appHeading"> Splyce</span></br>
+			 <span class="appDesc">Live a whole new music experience with Splyce! The most beautiful music player with magical DJ powers.</span></a></td>
 		 </tr>	
 		 		 			 		 
 		 <tr>
 		    <td><a href="https://itunes.apple.com/us/app/onswitch-for-philips-hue-lifx/id853520339?mt=8"><img src="imagesIOS/onswitch.png" /></a></td>
-			<td><span class="appHeading"><a href="https://itunes.apple.com/us/app/onswitch-for-philips-hue-lifx/id853520339?mt=8"> OnSwitch</a></span></br>
-			 <span class="appDesc">Use your hue lighting to feel transported to Iceland, New Mexico, the Sahara, or simply tint your lights to complement the design of your living room.</span></td>
+			<td><a href="https://itunes.apple.com/us/app/onswitch-for-philips-hue-lifx/id853520339?mt=8"><span class="appHeading"> OnSwitch</span></br>
+			 <span class="appDesc">Use your hue lighting to feel transported to Iceland, New Mexico, the Sahara, or simply tint your lights to complement the design of your living room.</span></a></td>
 		 </tr>	
 		 
 	
