Fixed link on HuePuzzle App.

--- a/otherapps/otherAppsIOS.html
+++ b/otherapps/otherAppsIOS.html
@@ -71,7 +71,7 @@
 			</tr>
 			<tr>
 			  <td><a href="http://cdn.appshopper.com/icons/818/336878_larger.png"><img src="imagesIOS/HuePuzzle.png" /></a></td>
-			  <td><a href="http://cdn.appshopper.com/icons/818/336878_larger.png"><span class="appHeading">Hue Puzzle</span></br>
+			  <td><a href="https://itunes.apple.com/us/app/id818336878?mt=8"><span class="appHeading">Hue Puzzle</span></br>
 			    <span class="appDesc">"This is the first Hue Game for Philips Hue!!! This is A Puzzle Game with Multiple modes to play, and with also hidden features for you to find out!!! Play this game and unlock your own hue achievements!"</span></a></td>
 			</tr>
 			<tr>
