Decreased the length of the description (other IOS Apps).

--- a/otherapps/otherAppsIOS.html
+++ b/otherapps/otherAppsIOS.html
@@ -44,48 +44,48 @@
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id586219707?mt=8"><img src="imagesIOS/MagicHue.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id586219707?mt=8"><span class="appHeading">MagicHue</span></br>
-			    <span class="appDesc">Meet the hue app that transforms your rooms into living color art: From relaxing smooth fading to a highly dynamic visual music experience. Use it for a romantic dinner setup or your next party at home! </span></a></td>
+			    <span class="appDesc">Meet the hue app that transforms your rooms into living color art: From relaxing smooth fa...</span></a></td>
 			</tr>
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id730148796?mt=8"><img src="imagesIOS/HueHalloween.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id730148796?mt=8"><span class="appHeading">Hue Halloween</span></br>
-			    <span class="appDesc">"Hue Halloween is a Sound and Light Effects Board, that works with your Philips Hue Connected Light Bulbs.!! Halloween Sound FX in sync with Halloween Hue Light FX !! Darken your room, connect the audio to your speakers! And get ready for a good scare! ;)"</span></a></td>
+			    <span class="appDesc">"Hue Halloween is a Sound and Light Effects Board, that works with your Philips Hue Connec...</span></a></td>
 			</tr>
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id756904908?mt=8"><img src="imagesIOS/HueChristmas.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id756904908?mt=8"><span class="appHeading">Hue Christmas</span></br>
-			    <span class="appDesc">All I want for christmas is Hue! Hue Christmas is the perfect way to get in the holiday mood with your Philips Hue lights. It is a Sound and Light </span></a></td>
+			    <span class="appDesc">All I want for christmas is Hue! Hue Christmas is the perfect way to get in the holiday mo...</span></a></td>
 			</tr>
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id767440066?mt=8"><img src="imagesIOS/HueFireworks.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id767440066?mt=8"><span class="appHeading">Hue Fireworks</span></br>
-			    <span class="appDesc">Have firecrackers explode in your room and let colourful rockets lit the ceiling. Hue Fireworks can count down for you and have the party crowd go wild at 00:00 on New Years Eve, Chinese New Year the 4th on July, Quatorze Juillet or any other occasion that deserves an explosive celebration.</span></a></td>
+			    <span class="appDesc">Have firecrackers explode in your room and let colourful rockets lit the ceiling. Hue Fire...</span></a></td>
 			</tr>
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id436026363?mt=8"><img src="imagesIOS/Ranatree.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id436026363?mt=8"><span class="appHeading">Ranatree</span></br>
-			    <span class="appDesc">"For all ages! Create and share beautiful trees with only a few gestures, or watch Ranatree build them for you. NEW: Let Ranatree take control of your Philips Hue lights! Sit back and relax, watching Ranatree create colors on your device and in your home! Make your own unique fractal trees: a few ba...</span></a></td>
+			    <span class="appDesc">"For all ages! Create and share beautiful trees with only a few gestures, or watch Ranatre...</span></a></td>
 			</tr>
 			<tr>
 			  <td colspan=3><h2>Games</h2></td>
 			</tr>
 			<tr>
-			  <td><a href="http://cdn.appshopper.com/icons/818/336878_larger.png"><img src="imagesIOS/HuePuzzle.png" /></a></td>
+			  <td><a href="https://itunes.apple.com/us/app/id818336878?mt=8"><img src="imagesIOS/HuePuzzle.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id818336878?mt=8"><span class="appHeading">Hue Puzzle</span></br>
-			    <span class="appDesc">"This is the first Hue Game for Philips Hue!!! This is A Puzzle Game with Multiple modes to play, and with also hidden features for you to find out!!! Play this game and unlock your own hue achievements!"</span></a></td>
+			    <span class="appDesc">"This is the first Hue Game for Philips Hue!!! This is A Puzzle Game with Multiple modes t...</span></a></td>
 			</tr>
 			<tr>
 			  <td colspan=3><h2>Healthcare and Fitness</h2></td>
 			</tr>
 			<tr>
-			  <td><a href="https://itunes.apple.com/us/app/id320606217?mt=8"><img src="imagesIOS/SleepCycleAlarmClock.png" /></a></td>
-			  <td><a href="https://itunes.apple.com/us/app/id320606217?mt=8"><span class="appHeading">Sleep Cycle Alarm Clock</span></br>
-			    <span class="appDesc">"Description Waking up made easy. An intelligent alarm clock that analyzes your sleep and wakes you in the lightest sleep phase – the natural way to wake up feeling rested and relaxed.  Sleep Cycle helps millions of people to wake up rested!"</span></a></td>
+			  <td><a href="https://itunes.apple.com/us/app/id320606217?mt=8"><img src="imagesIOS/SleepCyclealarmclock.png" /></a></td>
+			  <td><a href="https://itunes.apple.com/us/app/id320606217?mt=8"><span class="appHeading">Sleep Cycle alarm clock</span></br>
+			    <span class="appDesc">"Description Waking up made easy. An intelligent alarm clock that analyzes your sleep and ...</span></a></td>
 			</tr>
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id537446731?mt=8"><img src="imagesIOS/BlueLightTherapy.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id537446731?mt=8"><span class="appHeading">Blue Light Therapy</span></br>
-			    <span class="appDesc">"Play with blue light and feel better!This FREE Blue Light Therapy App is intended to stimulate your brain with blue light. SupraChiasmatic Nucleus (SCN), a region of your brain receives information about the light that you see through your eyes and makes sleep/wake transition decisions.  I do not k...</span></a></td>
+			    <span class="appDesc">"Play with blue light and feel better!This FREE Blue Light Therapy App is intended to stim...</span></a></td>
 			</tr>
 			<tr>
 			  <td colspan=3><h2>Lifestyle</h2></td>
@@ -93,22 +93,22 @@
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id541104615?mt=8"><img src="imagesIOS/SnoozyAlarmClock.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id541104615?mt=8"><span class="appHeading">Snoozy Alarm Clock</span></br>
-			    <span class="appDesc">Snoozy brings the excitement of Philips hue lights to the best smartphone alarm clock. With Snoozy running on your nightstand, set the mood by switching to one of your custom color palettes, adjust brightness with a two-finger swipe or toggle your lights on and off with a long press. Controlled from...</span></a></td>
+			    <span class="appDesc">Snoozy brings the excitement of Philips hue lights to the best smartphone alarm clock. Wit...</span></a></td>
 			</tr>
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id706228953?mt=8"><img src="imagesIOS/Goldee.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id706228953?mt=8"><span class="appHeading">Goldee </span></br>
-			    <span class="appDesc">Imagine your living room transformed into a romantic Paris evening with beautiful pink and purple ambient lighting, subtly evolving into new shades of color with each moment. Wake up easier in the morning and feel rested by gradually brightening light that mimics the sun.</span></a></td>
+			    <span class="appDesc">Imagine your living room transformed into a romantic Paris evening with beautiful pink and...</span></a></td>
 			</tr>
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id695235159?mt=8"><img src="imagesIOS/Lightbow.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id695235159?mt=8"><span class="appHeading">Lightbow</span></br>
-			    <span class="appDesc">Lightbow aims to be the ultimate controller for the new generation of networked lighting hardware. Take full advantage of Philips hue, LIFX, and Belkin WeMo, or control them all at once with presets, groups, triggers, transitions, and more! Check www.lightbow.net/hardware to see which features are s...</span></a></td>
+			    <span class="appDesc">Lightbow aims to be the ultimate controller for the new generation of networked lighting h...</span></a></td>
 			</tr>
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id853520339?mt=8"><img src="imagesIOS/OnSwitch.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id853520339?mt=8"><span class="appHeading">OnSwitch</span></br>
-			    <span class="appDesc">Use your Philips Hue and/or LIFX to feel transported to Iceland, New Mexico, the Sahara, or simply tint your lights to complement the design of your living room</span></a></td>
+			    <span class="appDesc">Use your Philips Hue and/or LIFX to feel transported to Iceland, New Mexico, the Sahara, o...</span></a></td>
 			</tr>
 			<tr>
 			  <td colspan=3><h2>Utilities</h2></td>
@@ -116,7 +116,7 @@
 			<tr>
 			  <td><a href="https://itunes.apple.com/us/app/id887590869?mt=8"><img src="imagesIOS/Aurora.png" /></a></td>
 			  <td><a href="https://itunes.apple.com/us/app/id887590869?mt=8"><span class="appHeading">Aurora</span></br>
-			    <span class="appDesc">Aurora is a fun and easy way to control a Philips Hue lighting system. See your space in a whole new light with the Aurora app for iPhone.</span></a></td>
+			    <span class="appDesc">Aurora is a fun and easy way to control a Philips Hue lighting system. See your space in a...</span></a></td>
 			</tr>
 				
 	  </table>
