Added the remainder of the other IOSApps (and improved header).

--- a/otherapps/otherAppsAndroid.html
+++ b/otherapps/otherAppsAndroid.html
@@ -35,6 +35,10 @@
 		    color: #1E1E1E;
             text-decoration: none;
 		}
+		h2 {
+		  position: relative;
+		  top: 20px;	  
+		}
 		
     </style>
   </head>
