--- a/otherapps/otherAppsAndroid.html
+++ b/otherapps/otherAppsAndroid.html
@@ -123,7 +123,7 @@
 		</tr>
 		<tr>
 		  <td><a href="https://play.google.com/store/apps/details?id=com.kuxhausen.huemore"><img src="imagesAndroid/LampShade.ioforHue&LIFX.png" /></a></td>
-		  <td><a href="https://play.google.com/store/apps/details?id=com.kuxhausen.huemore"><span class="appHeading">LampShade.io for Hue & LIFX</span></br>
+		  <td><a href="https://play.google.com/store/apps/details?id=com.kuxhausen.huemore"><span class="appHeading">LampShade.io</span></br>
 		    <span class="appDesc">"LampShade provides convenient and useful controls for smart home lighting. Currently supp...</span></a></td>
 		</tr>
 		<tr>
